# gitlabci-lint-pre-commit-hook

./: .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .pypirc  .tool-versions  LICENSE  LICENSE.txt  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml  scripts.yml  src.yml  tests.yml
.github/: renovate.json  settings.yml
examples/: gitlab-ci-lint-PASS.toml
examples/gitlab-ci/: .gitlab-ci-1-FAIL.yml  .gitlab-ci-1-PASS.yml
examples/gitlabci-lint-conf/: .gitlabci-lint-defaults.toml  .gitlabci-lint-self-hosted-quiet.toml  .gitlabci-lint-self-hosted.toml
gitlabci_lint/: __init__.py
pre_commit_gitlabci_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: clean.sh  dependencies.sh  develop.sh  pylint.sh  tests.sh
src/gitlabci_lint/: cli.py  validate.py
tests/: .gitlab-ci-example-1-FAIL.yml  .gitlab-ci-example-2-FAIL.yml  .gitlab-ci-example-3-FAIL.yml  run-tests.sh
