[tool.poetry]
name = "pre-commit-gitlabci-lint"
version = "1.4.0"
description = "Validate GitLab CI templates with a GitLab instance's API endpoint"
authors = ["Emma Doyle <emma.ann.doyle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
gitlabci-lint = "src.gitlabci_lint.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
strict_optional = true
ignore_missing_imports = true